--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
+    "react-pdf": "^7.6.0",
     "three": "^0.160.0"
   },
   "devDependencies": {
